# ainalyn-sdk

./: .editorconfig  .git-commit-files.md  .git-commit-plan.md  .gitignore  .gitmessage  .pre-commit-config.yaml  404.html  =6.0  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEPLOY_DOCS.md  DOCS_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_PLAN_v0.1.0-alpha.2.md  LICENSE  Makefile  README.md  REFACTOR_PLAN.md  hex-arch.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  refactor-ref.md  robots.txt  sitemap.xml
.github/: LABELS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
404/: index.html
DOCUMENTATION_GUIDE/: index.html
VERSIONING/: index.html
_next/static/6S4YXiYTZwSslugzE82H-/: _buildManifest.js
_next/static/9E76dACfYf71SA5K4AHE9/: _buildManifest.js
_next/static/BsIfmSrWlDMqre9oEGel0/: _buildManifest.js
_next/static/CAirONzo5g4tF0pCTFTEM/: _buildManifest.js
_next/static/FnsLtLTHcRb1VvX-kPhSJ/: _buildManifest.js
_next/static/JRgWmtuKZqqjDaB8e_Vkl/: _buildManifest.js
_next/static/NVEZ0ZoQ2VPyjbM7aYKgG/: _buildManifest.js  _ssgManifest.js
_next/static/QnlVmq0E9N-uFOp5znNf-/: _buildManifest.js
_next/static/ThJgKwDuVL7vQqykVt-_v/: _buildManifest.js
_next/static/Y10RACJlNK4Do9iLq6gwg/: _buildManifest.js  (+1 more)
ainalyn/: __init__.py  _version.py  api.py  cli.py
ainalyn-docs/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  theme.config.tsx
ainalyn-docs/components/: PagefindSearch.tsx  VersionSwitcher.tsx
ainalyn-docs/pages/: _meta.ts  index.mdx
ainalyn-docs/scripts/: postbuild.mjs
ainalyn-docs/styles/: globals.css
ainalyn/application/: __init__.py  services.py
ainalyn/domain/: __init__.py
ainalyn/infrastructure/: service_factory.py
ainalyn/ports/: __init__.py
ainalyn/runtime/: context.py  decorators.py  state_reporter.py
api-reference/api/: index.html
api-reference/builders/: index.html
api-reference/cli/: index.html
api-reference/entities/: index.html
changelog/: index.html
concepts/agent-definition/: index.html
concepts/architecture-overview/: index.html
concepts/compiler-not-runtime/: index.html
concepts/platform-boundaries/: index.html
contracts/openapi/: chat-api.yaml  counseling-api.yaml  history-api.yaml  image-analysis-api.yaml  image-to-music-api.yaml  presentation-api.yaml  settings-api.yaml  sketch-to-image-api.yaml  sketch-to-video-api.yaml  speech-to-image-api.yaml  speech-to-text-api.yaml  text-to-music-api.yaml  translation-api.yaml  travel-planning-api.yaml  video-analysis-youtube-api.yaml  video-generation-api.yaml
docs/: API_CATALOG.md  API_SURFACE_AND_EXTENSIBILITY.md  ARCHITECTURE_FOR_DEVS.md  COMMIT_CONVENTIONS.md  CONTRIBUTING_INTERNAL.md  DOCUMENTATION_GUIDE.md  ERROR_AND_LOGGING_MODEL.md  INTERNAL_CODING_GUIDE.md  README.md  RUST_INTEGRATION_GUIDE.md  TESTING_STRATEGY.md  VERSIONING.md  changelog.md  index.md  troubleshooting.md
docs/api-reference/: api.md  builders.md  entities.md
docs/concepts/: agent-definition.md  architecture-overview.md  compiler-not-runtime.md  platform-boundaries.md
docs/getting-started/: installation.md  quickstart.md  your-first-agent.md
docs/guides/: errors.md  modules.md  prompts.md  tools.md  validation.md  workflows.md  yaml-export.md
examples/: basic_agent.py  meeting_transcriber_agent.py  multi_workflow_agent.py  price_monitor_agent.py  submit_agent_example.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/your-first-agent/: index.html
guides/errors/: index.html
guides/modules/: index.html
guides/prompts/: index.html
guides/tools/: index.html
guides/validation/: index.html
guides/workflows/: index.html
guides/yaml-export/: index.html
pagefind/: pagefind-entry.json  pagefind.unknown_2c4b71c37e753ac.pf_meta  pagefind.unknown_57aae1b9295bd5f.pf_meta  pagefind.unknown_6a9fe110788afb5.pf_meta  pagefind.unknown_78d9332fc884d4d.pf_meta  pagefind.unknown_9758981cfcc14c6.pf_meta  pagefind.unknown_b0abfa28c5ea317.pf_meta  pagefind.unknown_d39775d8244b0bb.pf_meta  pagefind.unknown_f489f1323a96291.pf_meta
pagefind/fragment/: unknown_0acc8ad.pf_fragment  unknown_152cb11.pf_fragment  unknown_157238e.pf_fragment  unknown_1be96d7.pf_fragment  unknown_1e60b74.pf_fragment  unknown_1feaa48.pf_fragment  unknown_1ff36a9.pf_fragment  unknown_24345b5.pf_fragment  unknown_24de1b7.pf_fragment  unknown_2733ebb.pf_fragment  unknown_2985c56.pf_fragment  unknown_2ae4af3.pf_fragment  unknown_2ee8db5.pf_fragment  unknown_2fb97dc.pf_fragment  unknown_32f4b62.pf_fragment  unknown_34f61fe.pf_fragment  unknown_3588468.pf_fragment  unknown_36a0407.pf_fragment  unknown_37582b7.pf_fragment  unknown_386a1a7.pf_fragment  unknown_3f666aa.pf_fragment  unknown_3f8d343.pf_fragment  unknown_40ece72.pf_fragment  unknown_415a591.pf_fragment  unknown_419d8f2.pf_fragment  unknown_422af32.pf_fragment  unknown_42fae02.pf_fragment  unknown_43aa896.pf_fragment  unknown_4569fb9.pf_fragment  unknown_457e9c6.pf_fragment  unknown_45f16e7.pf_fragment  unknown_47feb32.pf_fragment  unknown_4847d6f.pf_fragment  unknown_4f68f23.pf_fragment  unknown_4fd7f5c.pf_fragment  unknown_506643d.pf_fragment  unknown_51c9c1e.pf_fragment  unknown_5395416.pf_fragment  unknown_56f3680.pf_fragment  unknown_5ab8aca.pf_fragment  (+88 more)
pagefind/index/: unknown_29ecaa4.pf_index  unknown_2e40753.pf_index  unknown_3083c51.pf_index  unknown_3670362.pf_index  unknown_467dce4.pf_index  unknown_4f10973.pf_index  unknown_51228af.pf_index  unknown_52882d0.pf_index  unknown_54d95e3.pf_index  unknown_5769583.pf_index  unknown_6f581c9.pf_index  unknown_7b89bc1.pf_index  unknown_7d55f6d.pf_index  unknown_83618f6.pf_index  unknown_a5e85df.pf_index  unknown_bee17b9.pf_index  unknown_c3722fe.pf_index  unknown_cba469b.pf_index  unknown_eade2e9.pf_index
scripts/: check_commit_msg.py
search/: search_index.json
tests/integration/: test_end_to_end.py
tests/unit/: test_check_commit_msg.py
troubleshooting/: index.html
v1/getting-started/: index.html
(+398 files in other folders)
