[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainalyn-sdk"
version = "0.1.0"
description = "Ainalyn SDK - A Python SDK for CoreNovus AI Services"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "CoreNovus Team", email = "dev@corenovus.com" },
]
keywords = [
    "ai",
    "sdk",
    "llm",
    "chat",
    "translation",
    "speech-to-text",
    "image-generation",
    "video-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ainalyn-sdk[test,lint,type]",
    "pre-commit>=3.6.0",
    "ipython>=8.0.0",
]

# Testing
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "coverage[toml]>=7.3.0",
    "respx>=0.20.0",
    "hypothesis>=6.92.0",
]

# Linting
lint = [
    "ruff>=0.1.8",
    "black>=23.12.0",
]

# Type checking
type = [
    "mypy>=1.7.0",
    "types-setuptools>=69.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# All optional dependencies
all = [
    "ainalyn-sdk[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/corenovus/ainalyn-sdk"
Documentation = "https://ainalyn-sdk.readthedocs.io"
Repository = "https://github.com/corenovus/ainalyn-sdk"
Issues = "https://github.com/corenovus/ainalyn-sdk/issues"
Changelog = "https://github.com/corenovus/ainalyn-sdk/blob/main/CHANGELOG.md"

# ============================================================================
# Ruff - Fast Python Linter & Formatter
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

# Ignore these rules
ignore = [
    "E501",    # line too long (handled by formatter)
    "COM812",  # missing trailing comma (conflicts with formatter)
    "ISC001",  # single line implicit string concatenation (conflicts with formatter)
    "TD002",   # missing author in TODO
    "TD003",   # missing issue link in TODO
    "FIX002",  # line contains TODO
    "PLR0913", # too many arguments (we have complex APIs)
    "PLR2004", # magic value comparison (too strict)
    "TRY003",  # long exception messages (we want descriptive errors)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use assert, print, and have unused arguments
"tests/**/*.py" = [
    "S101",    # assert
    "T201",    # print
    "ARG001",  # unused argument
    "ARG002",  # unused method argument
    "PLR2004", # magic values
    "S105",    # hardcoded password (test fixtures)
    "S106",    # hardcoded password (test fixtures)
]
# Scripts can use print
"scripts/**/*.py" = ["T201"]
# __init__.py can have unused imports (re-exports)
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["ainalyn"]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# ============================================================================
# Black - Code Formatter (backup, prefer ruff format)
# ============================================================================
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.ruff_cache
    | \.venv
    | venv
    | _build
    | build
    | dist
)/
'''

# ============================================================================
# MyPy - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Disallow dynamic typing
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
strict_optional = true
no_implicit_optional = true

# Configuring warnings
warn_no_return = true

# Misc
no_implicit_reexport = true
strict_equality = true
extra_checks = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "respx.*",
    "hypothesis.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Strict markers
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]

# Custom markers
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]

# Filter warnings
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Note: timeout requires pytest-timeout plugin
# timeout = 30

# ============================================================================
# Coverage - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "class .*\\bProtocol\\):",
    "@overload",
    "\\.\\.\\.",
]
fail_under = 85
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Hatch - Build System
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/ainalyn"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]
